--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/joeauyeung/Body-Hack-2021#readme",
   "dependencies": {
+    "@react-firebase/firestore": "^0.5.5",
+    "create-react-app": "^4.0.3",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase": "^8.3.1"
   }
 }
